# basalt

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  NOTES.md  README.md  TODO.md  archaeo_run.sh  basalt.js  basalt.sln  build.bat  build.sh  build_cpp.bat  build_editor.sh  build_tooling.bat  build_wasm.sh  build_windows_modern.bat  build_windows_xp.bat  build_xorg.sh  build_xp.bat  clean.bat  editor_build.sh  editor_run.sh  env.cmd  index.html  maps.md  package-lock.json  package.json  sdl2_build.sh  shell.bat  static_analysis.txt  stdlib.bat  temple_build.sh  temple_run.sh  test_stdlib.bat  todo.sh  tooling_build.bat  (+8 more)
.github/workflows/: compile.yml  compile_msvc.yml  host.yml
.github/workflows_/: compile.yml
.scratchpad/: temple_assets.h  temple_game.c  temple_game.c_
assets/: loc_editor.csv
basalt/: CMakeLists.txt  basalt.h  basalt.vcxproj  basalt.vcxproj.filters  basalt_assets.cpp  basalt_assets.hpp  basalt_colors.cpp  basalt_colors.hpp  basalt_config.cpp  basalt_config.hpp  basalt_console.cpp  basalt_console.hpp  basalt_exceptions.cpp  basalt_exceptions.hpp  basalt_graphics.cpp  basalt_graphics.hpp  basalt_graphics_fonts.cpp  basalt_graphics_fonts.hpp  basalt_images.cpp  basalt_images.hpp  basalt_images_extra.cpp  basalt_images_extra.hpp  basalt_images_fonts.cpp  basalt_images_fonts.hpp  basalt_input.hpp  basalt_instance.cpp  basalt_instance.hpp  basalt_macros.hpp  basalt_math.cpp  basalt_math.hpp  basalt_math_tweening.cpp  basalt_math_tweening.hpp  basalt_persistence.cpp  basalt_persistence.hpp  basalt_profiler.cpp  basalt_profiler.hpp  basalt_profiler_gui.cpp  basalt_renderer.cpp  basalt_renderer.hpp  basalt_replays.cpp  (+18 more)
basalt/src/: basalt.h  basalt_archaeo.c  basalt_archaeo.cpp  basalt_archaeo.hpp  basalt_assets.cpp  basalt_config.c  basalt_config.cpp  basalt_console.cpp  basalt_console.hpp  basalt_dialog.cpp  basalt_dialog.hpp  basalt_dialog_utils.c  basalt_dialog_utils.cpp  basalt_extra.h  basalt_extra.hpp  basalt_extra_graphics.c  basalt_graphics.c  basalt_graphics.cpp  basalt_graphics.hpp  basalt_graphics_fonts.cpp  basalt_internal.hpp  basalt_keys.h  basalt_math.cpp  basalt_math.hpp  basalt_tests.c  basalt_utils.c  basalt_utils.cpp  basalt_utils.hpp  sdl2_basalt.cpp  sdl2_basalt_input.cpp  sdl2_plat.hpp  windows_basalt_utils.c
basalt/tooling/: embedder
basalt_3d/: CMakeLists.txt  basalt_3d.cpp  basalt_3d.h  basalt_3d.vcxproj  basalt_3d.vcxproj.filters  framework.h
basalt_extra/: basalt_dialog.cpp  basalt_dialog.hpp  basalt_dialog_utils.cpp  basalt_extra.cpp  basalt_extra.vcxproj  basalt_extra.vcxproj.filters
build_xorg/: a.out
example_game/: example_colors.cpp  example_game.cpp  example_game.h  example_game.vcxproj  example_game.vcxproj.filters  resource.h
example_game/src/: example_colors.cpp  example_game.cpp
example_game_3d/: example_game_3d.cpp  example_game_3d.vcxproj  example_game_3d.vcxproj.filters  resource.h
games/: CMakeLists.txt
games/example_game/: CMakeLists.txt  example_colors.cpp  example_game.cpp  example_game.h  example_game.hpp  example_game.rc  example_game.vcxproj
games/example_game/assets/: example_pattern.cpp
games/example_game_3d/: CMakeLists.txt  example_game_3d.cpp  example_game_3d.vcxproj  example_game_3d.vcxproj.filters
games/tweening_viewer/: CMakeLists.txt  tweening_display.cpp  tweening_scroll.cpp  tweening_viewer.cpp  tweening_viewer.vcxproj  tweening_viewer.vcxproj.filters
launcher/: CrasherForm.Designer.cs  CrasherForm.cs  CrasherForm.resx  FileUtils.cs  GameProcess.cs  Package.ps1  ProcessStarter.cs  Program.cs  launcher.csproj
launcher/Properties/: AssemblyInfo.cs
misc/: logo_original.xcf  logo_small.xcf
renderers/: CMakeLists.txt
renderers/renderer_legacy/: CMakeLists.txt  renderer_legacy.cpp  renderer_legacy.vcxproj  renderer_legacy.vcxproj.filters
renderers/renderer_sdl_cpu/: CMakeLists.txt  renderer_sdl_cpu.cpp  renderer_sdl_cpu.vcxproj  renderer_sdl_cpu.vcxproj.filters
src/: CMakeLists.txt  assets_core.h  assets_custom.dat.c  basalt.h  basalt_archaeo.c  basalt_assets.c  basalt_assets.cpp  basalt_config.c  basalt_dialog.c  basalt_dialog.cpp  basalt_extra.h  basalt_extra.hpp  basalt_extra_graphics.c  basalt_getters.c  basalt_graphics.c  basalt_graphics_fonts.cpp  basalt_internal.hpp  basalt_launcher.c  basalt_launcher_graphics.c  basalt_locale.c  basalt_plat.c  basalt_plat.h  basalt_stdlib.c  basalt_stdlib.h  basalt_stdlib_tests.c  basalt_tests.c  basalt_utils.c  basalt_win32.c  bullet_ai.c  bullet_assets.h  bullet_collision.c  bullet_common.h  bullet_dialog.c  bullet_dialog_utils.c  bullet_editor.c  bullet_editor_patterns.c  bullet_entities.c  bullet_factories.c  bullet_game.c  bullet_gui.c  (+26 more)
src/example/: CMakeLists.txt  example_colors.c  example_game.c  example_game.h
src/tooling/: archaeo.c  editor.c  embedder.c  embedder_locale.d  locale_embedder.d  test_run.sh  tools_embedder.c
src/tooling/editor/: editor_main.v
temple_src/: temple_assets.c  temple_game.c
test/: test.vcxproj
tweening_viewer/: resource.h  tweening_display.cpp  tweening_scroll.cpp  tweening_viewer.cpp  tweening_viewer.vcxproj  tweening_viewer.vcxproj.filters
wasm/: index.html  package.json
wasm/src/: main.ts  vite-env.d.ts
wasm_src/: main.ts  vite-env.d.ts
